--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						<div class="column width-12">
 							<div class="footer-bottom-inner center">
 								<p class="copyright pull-left clear-float-on-mobile">
-									&copy; QikGrub. All Rights Reserved. <a href="terms.html" target="_blank">Terms &amp; Conditions</a> | <a href="privacy.html" target="_blank">Privacy</a> | <a href="refunds.html" target="_blank">Refunds &amp; Cancellations</a>
+									&copy; QikGrub. All Rights Reserved. <a href="http://qikgrub.com/terms.html" target="_blank">Terms &amp; Conditions</a> | <a href="http://qikgrub.com/privacy.html" target="_blank">Privacy</a> | <a href="http://qikgrub.com/refunds.html" target="_blank">Refunds &amp; Cancellations</a>
 								</p>
                                 
                                 <p class="copyright pull-right clear-float-on-mobile">
@@ -153,7 +153,7 @@
 
 		</div>
 	</div>
-
+    
 	<!-- Js -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="http://maps.googleapis.com/maps/api/js?v=3"></script>
