--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:image" content="Your-Image-Url" />
 	<meta property="og:description" content="Think Food. Think Us." />
-	<title>Qikgrub</title>
+	<title>QikGrub</title>
 	<link rel="shortcut icon" type="image/x-icon" href="images/qgsmall.png">
 
 	<!-- Font -->
