--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 								</p>
                                 
                                 <p class="copyright pull-right clear-float-on-mobile">
-                                    <a href="http://vectorx.co" class="no-page-fade" target="_blank">Designed and Developed by VectorX Technologies</a>
+                                    <a href="http://kriyative-edge.com" class="no-page-fade" target="_blank">Powered by Kriyative Edge</a>
 								</p>
                                 
 							</div>
