--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                         <div class="no-borders">
                                             <div class="feature-column center">
                                                 <span><img src="images/qikgrublogo.png" width="512px" alt="Qikgrub Logo" /></span>
-                                                <span><p class="title-medium lspace">TESTing</p></span>
+                                                <span><p class="title-medium lspace">TEST-NOW</p></span>
                                             </div>    
                                         </div>
                                     </div>  
