--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="top-line"></div>
 <div id="wrapper">
   <div class="header">
-    <div id="logo"><a href="index.html"> <img src="images/tplogo.jpg" alt="" width=120px height=120px  /> </a></div>
+    <div id="logo"><a href="index.html"> <img src="images/tplogo.png" alt="" width=120px height=120px  /> </a></div>
     <DIV id="navigation">
     <nav>
         <ul id="nav">
