--- a/Howitworks.html
+++ b/Howitworks.html
@@ -39,7 +39,7 @@
           -->
 		  </li>
            
-          <li><a href="Careers.html" title="Careers">Careers
+          <li><a href="careers.html" title="Careers">Careers
              </a></li>
 
           <li><a href="contactus.html" title="Contact Us">Contact Us
