--- a/careers.html
+++ b/careers.html
@@ -40,7 +40,7 @@
           -->
 		  </li>
             
-          <li><a href="Careers.html" title="Careers" class="active">Careers
+          <li><a href="careers.html" title="Careers" class="active">Careers
              </a></li>
           <li><a href="contactus.html" title="Contact Us">Contact Us
              </a></li>
