--- a/contactus.html
+++ b/contactus.html
@@ -40,7 +40,7 @@
           -->
 		  </li>
             
-          <li><a href="Careers.html" title="Careers">Careers
+          <li><a href="careers.html" title="Careers">Careers
              </a></li>
           <li><a href="#" title="Contact Us" class="active">Contact Us
              </a></li>
