--- a/howitworks.html
+++ b/howitworks.html
@@ -72,6 +72,7 @@
   </div>
   
 <embed width="420" height="315" src="http://www.youtube.com/embed/pj0848pBLCM">
+<iframe width="420" height="315" src="http://www.youtube.com/embed/pj0848pBLCM"> </iframe>
 <!--  <div id="banner">
                               
 <div id="bnr-inr_p"> <img src="slider/images/001.jpg" alt="" title="" /></div>
