--- a/howitworks.html
+++ b/howitworks.html
@@ -71,7 +71,7 @@
     </div>
   </div>
   
-<embed width="420" height="315" src="http://www.youtube.com/embed/pj0848pBLCM">
+<!-- <embed width="420" height="315" src="http://www.youtube.com/embed/pj0848pBLCM"> -->
 <iframe width="420" height="315" src="http://www.youtube.com/embed/pj0848pBLCM"> </iframe>
 <!--  <div id="banner">
                               
