--- a/howitworks.html
+++ b/howitworks.html
@@ -44,13 +44,13 @@
              </a></li>
           <li><a href="contactus.html" title="Contact Us">Contact Us
              </a></li>
-          <li><a href="#" title="How It Works" class="active">How It Works
+          <li><a href="howitworks.html" title="How It Works" class="active">How It Works
              </a></li>
 
         </ul>
       </nav>
     
-<!--	
+
 	
       <div id="ff-nav">
         <nav class="nav">
@@ -67,7 +67,7 @@
           </ul>
         </nav>
       </div>
--->
+
 
     </div>
   </div>
@@ -87,6 +87,8 @@
   </div>
   </div>
 </div>
+
+
 <div id="footer">
   <div class="footer">
     <div class="ftinr">
