--- a/aboutus.html
+++ b/aboutus.html
@@ -76,8 +76,9 @@
    <div id="aboutus_main">
   <div id="about_contant">
   <h2>About Us</h2>
- <p>The company management is always passionate about delivering “an early, sustained and a fulfilling growth platform for young engineers” which is a rarity and even if it did was limited to a select few. We want to bring a proven concept of learning and play to everyone and have them experience it for themselves. Our vision is to create a long-term parallel and sustainable environment to be able to create a deeper positive impact on an employee's growth and development. This is just the beginning for us…We embarked on this path to offer you many more interesting offerings in different areas in the future. </p>
- <p>Our goal is to create people who can lead by example, have conviction and vision and are able to harness resources and bring the best out of other's abilities.</p>
+ <p>Our company was founded with a definitive mission to provide a growth platform to empower and enable the hard-working and motivated individuals (and companies). They are assured of a greater visibility and expanded reach through us and we help them become part of the larger economy. Our first product QikGrub was created with an intention to help both customers and vendors to have access to speciality foods with minimal infrastructure for the vendors so they can focus on their skills of making great food and leaving the rest to us. </p>
+ <p>Download and experience our app to get a glimpse of well thought out and designed product that showcases our world-class User Experience and Development teams. We engage in detailed analysis and studies for creating everything from icons, colors, and logos to the execution of the application flows.</p>
+ <p>We have also been teaching STEM concepts to school and college students to prepare them for a better future by providing them deep knowledge via activity based learning. For us, it has always been about Engagement, Empowerment, Outreach and Impact to the people who are hungry and motivated to carve out a great future for themselves. Your success will be our success. </p>
  
  </div>
 <div id="crp-form">
