--- a/aboutus.html
+++ b/aboutus.html
@@ -78,10 +78,10 @@
   <h2>About Us</h2>
  <p>Our company was founded with a definitive mission to provide a growth platform to empower and enable the hard-working and motivated individuals (and companies). They are assured of a greater visibility and expanded reach through us and we help them become part of the larger economy. Our first product QikGrub was created with an intention to help both customers and vendors to have access to speciality foods with minimal infrastructure for the vendors so they can focus on their skills of making great food and leaving the rest to us. </p>
  <p>Download and experience our app to get a glimpse of well thought out and designed product that showcases our world-class User Experience and Development teams. We engage in detailed analysis and studies for creating everything from icons, colors, and logos to the execution of the application flows.</p>
- <p>We have also been teaching STEM concepts to school and college students to prepare them for a better future by providing them deep knowledge via activity based learning. For us, it has always been about Engagement, Empowerment, Outreach and Impact to the people who are hungry and motivated to carve out a great future for themselves. Your success will be our success. </p>
+<!-- <p>We have also been teaching STEM concepts to school and college students to prepare them for a better future by providing them deep knowledge via activity based learning. For us, it has always been about Engagement, Empowerment, Outreach and Impact to the people who are hungry and motivated to carve out a great future for themselves. Your success will be our success. </p> -->
  
  </div>
-<div id="crp-form">
+<!-- <div id="crp-form">
 <div class="offerrightimg"><img src="images/ask.png" alt="" /></div>
         <div class="offerright">
           
@@ -98,7 +98,7 @@
             </form>
           </div>
         </div>
-      </div>
+      </div> -->
   </div>
   </div>
 </div>
