--- a/Howitworks.html
+++ b/Howitworks.html
@@ -71,7 +71,15 @@
     </div>
   </div>
   
-<embed width="420" height="315" src="http://www.youtube.com/embed/pj0848pBLCM">
+<!--<embed width="420" height="315" src="http://www.youtube.com/embed/pj0848pBLCM">
+-->	
+<p>
+
+ <a href="https://www.youtube.com/embed/pj0848pBLCM?rel=0&autoplay=1" frameborder="0" allowfullscreen> Click here to check our video </a></p>
+
+
+	
+	
 <!--  <div id="banner">
                               
 <div id="bnr-inr_p"> <img src="slider/images/001.jpg" alt="" title="" /></div>
