--- a/Howitworks.html
+++ b/Howitworks.html
@@ -75,15 +75,15 @@
 -->	
 <p>
 
- <a href="https://www.youtube.com/embed/pj0848pBLCM?rel=0&autoplay=1" frameborder="0" allowfullscreen> Click here to check our video </a></p>
+ <a href="https://www.youtube.com/embed/pj0848pBLCM" frameborder="0" allowfullscreen> Click here to check our video </a></p>
 
 
 	
 	
 <!--  <div id="banner">
                               
-<div id="bnr-inr_p"> <img src="slider/images/001.jpg" alt="" title="" /></div>
-</div>  -->
+<div id="bnr-inr_p"> <img src="slider/images/001.jpg" alt="" title="" /></div> -->
+</div> 
 
   <div id="inner_main">
    <div id="aboutus_main">
