--- a/howitworks.html
+++ b/howitworks.html
@@ -85,8 +85,13 @@
  </embed> </p> 
  
 <iframe width="640" height="360" src="http://www.youtube.com/embed/pj0848pBLCM" frameborder="0" allowfullscreen></iframe> -->
-<iframe width="640" height="360" src="http://www.youtube.com/embed/pj0848pBLCM?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
-  </div>
+<!--<iframe width="640" height="360" src="http://www.youtube.com/embed/pj0848pBLCM?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe> -->
+<p>
+
+ <a href="https://www.youtube.com/embed/pj0848pBLCM" frameborder="0" allowfullscreen> Click here to check our video </a></p>
+
+ 
+</div>
   </div>
 </div>
 
