--- a/terms.html
+++ b/terms.html
@@ -75,7 +75,7 @@
   <div id="inner_main">
    <div id="aboutus_main">
  <div id="home_contant">
-  <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Terms of Service</h2>
+  <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TERMS OF SERVICE</h2>
  <!-- <img src="images/corporate_img.jpg" alt="" id="crp-img"/> -->
       <p> <strong>OVERVIEW</strong></p>
       <br>
