--- a/slider/index.html
+++ b/slider/index.html
@@ -35,9 +35,11 @@
  <div class="slide slide-0">
     <div class="foreground">&nbsp;</div>
     <div class="overlay"> <a href="#" title="quit the line">
-      <h1 class="small medium-next">Do you really want to stand in this Line?</h1>
-      <h1 class="small medium-next">No,  Right?</h1>
-	  <h1 class="small medium-next">Then what to do? Go QikGrub!</h1>
+      <h1 class="small medium-next">Hungry? Do you really want to stand in line?</h1>
+  <!--    <h1 class="small medium-next">No,  Right?</h1> -->
+	  <h1 class="small medium-next">Just QikGrub and go!</h1>
+	    <h1 class="small medium-next">Expert cooks with an ambition - Signup Up Now!</h1>
+	    <h1 class="small medium-next">Be seen on the map and expand your reach</h1>
 <!--      <span class="info">Then what do you do..... Go QikGrub!</span> <span class="btn">View Details</span> </a> --> </div>
   </div>
  
