--- a/slider/index.html
+++ b/slider/index.html
@@ -35,7 +35,7 @@
  <div class="slide slide-0">
     <div class="foreground">&nbsp;</div>
     <div class="overlay"> <a href="#" title="quit the line">
-      <h2 class="small medium-next">Hungry? Do you really want to stand in line?</h2>
+      <h2 class="small medium-next" style="color:white;">Hungry? Do you really want to stand in line?</h2>
   <!--    <h1 class="small medium-next">No,  Right?</h1> -->
 	  <h2 class="small medium-next">Just QikGrub and go!</h2>
 	    <h2 class="small medium-next">Expert cooks with an ambition - Signup Up Now!</h2>
