--- a/slider/index.html
+++ b/slider/index.html
@@ -38,7 +38,7 @@
       <h1 class="small medium-next">Hungry? Do you really want to stand in line?</h1>
   <!--    <h1 class="small medium-next">No,  Right?</h1> -->
 	  <h1 class="small medium-next">Just QikGrub and go!</h1>
-	    <h1 class="small medium-next">Expert cooks with an ambition - Signup Up Now!</h1>
+	    <h1 class="small medium-next">Expert cooks with an ambition - Sign Up Now!</h1>
 	    <h1 class="small medium-next">Be seen on the map and expand your reach</h1>
 	    <h1 class="small medium-next">Food Trucks, you are covered anywhere you go</h1>
 <!--      <span class="info">Then what do you do..... Go QikGrub!</span> <span class="btn">View Details</span> </a> --> </div>
