--- a/slider/index.html
+++ b/slider/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>QikGrub</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
@@ -17,7 +18,8 @@
 <div id="top-buffer"></div>
 
 <!-- header Start --> 
-<!-- header End -->
+
+<!-- header end -->
 
 <div id="slideshow">
   <div class="column">
@@ -27,42 +29,33 @@
   </div>
   <div id="slide-bgs"> 
   <img src="images/line.jpg"  alt="" title="" border="0" />
- <!-- <img src="images/marquee-bg-airport-loungeb2.jpg"  alt="" title="" border="0" />
-  <img src="images/foodie.png"  alt="" title="" border="0" /> 
-  -->
-   </div>
-  
- <div class="slide slide-0">
+   <img src="images/001.jpg"  alt="" title="" border="0" />
+    <img src="images/002.jpg"  alt="" title="" border="0" /></div>
+  <div class="slide slide-0">
     <div class="foreground">&nbsp;</div>
     <div class="overlay"> <a href="#" title="quit the line">
-      <h1 class="small medium-next">Hungry? Do you really want to stand in line?</h1>
-  <!--    <h1 class="small medium-next">No,  Right?</h1> -->
-	  <h1 class="small medium-next">Just QikGrub and go!</h1>
-	    <h1 class="small medium-next">Expert cooks with an ambition - Sign Up Now!</h1>
-	    <h1 class="small medium-next">Be seen on the map and expand your reach</h1>
-	    <h1 class="small medium-next">Food Trucks, you are covered anywhere you go</h1>
-<!--      <span class="info">Then what do you do..... Go QikGrub!</span> <span class="btn">View Details</span> </a> --> </div>
+      <h1 class="small medium-next">Lorem Ipsum is simply dummy text</h1>
+	  <h1 class="small medium-next">Lorem Ipsum is simply dummy text</h1>
+      <h1 class="small medium-next">simply dummy text</h1>
+    <!--  <span class="info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.vLorem Ipsum is simply dummy text of the printing and typesetting industry. </span> <span class="btn">View Details</span> </a> --> </div>
   </div>
- 
-<!--  <div class="slide slide-1">
-        <div class="foreground">&nbsp;</div>
-        <div class="overlay"> <a href="#" title="mobile power">
-        <h1 class="small medium-next">Order Food </h1>
-        <h1 class="small medium-next">Easy Navigation</h1>
-        <span class="info">One click of a button! </span> <span class="btn">View Details</span> </a> </div>
-      </div>
-  -->
-  
- <!-- <div class="slide slide-2">
-        <div class="foreground">&nbsp;</div>
-        <div class="overlay"> <a href="#" title="Discover MyIT">
-        <h1 class="small medium-next">Right from your seat</h1>
-        <h1 class="small medium-next">Food is just a click away!</h1>
-        <span class="info" >Easy Food</span> <span class="btn">More Info</span> </a> </div>
-      </div>
--->
-
-</div> 
-
+  <div class="slide slide-1">
+    <div class="foreground">&nbsp;</div>
+    <div class="overlay"> <a href="#" title="food trucks">
+      <h1 class="small medium-next">Lorem Ipsum is simply dummy text </h1>
+      <h1 class="small medium-next">Lorem Ipsum is simply dummy text</h1>
+	  <h1 class="small medium-next">simply dummy text</h1>
+    <!--  <span class="info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.vLorem Ipsum is simply dummy text of the printing and typesetting industry. </span> <span class="btn">View Details</span> </a> --> </div>
+  </div>
+  <div class="slide slide-2">
+    <div class="foreground">&nbsp;</div>
+    <div class="overlay"> <a href="#" title="home chefs">
+      <h1 class="small medium-next">Lorem Ipsum is simply dummy text</h1>
+      <h1 class="small medium-next">Lorem Ipsum is simply dummy text</h1>
+	  <h1 class="small medium-next">simply dummy text</h1>
+    <!--  <span class="info" >Lorem Ipsum is simply dummy text of the printing and typesetting industry.vLorem Ipsum is simply dummy text of the printing and typesetting industry. </span> <span class="btn">More Info</span> </a>  --> </div>
+  </div>
+   
+</div>
 </body>
 </html>
