--- a/slider/index.html
+++ b/slider/index.html
@@ -41,17 +41,17 @@
   <div class="slide slide-1">
     <div class="foreground">&nbsp;</div>
     <div class="overlay"> <a href="#" title="food trucks">
-      <h1 class="small medium-next">Food Trucks, you are covered too</h1>
-      <h1 class="small medium-next">Be seen only when you are available</h1>
-	  <h1 class="small medium-next">Customers just QikGrub and go!</h1>
+      <h1 class="small medium-next">Food Trucks are covered too</h1>
+      <h1 class="small medium-next">Be on the map wherever you go</h1>
+	  <h1 class="small medium-next">Spend less time on Orders and Transactions</h1>
     <!--  <span class="info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.vLorem Ipsum is simply dummy text of the printing and typesetting industry. </span> <span class="btn">View Details</span> </a> --> </div>
   </div>
   <div class="slide slide-2">
     <div class="foreground">&nbsp;</div>
     <div class="overlay"> <a href="#" title="home chefs">
-      <h1 class="small medium-next">Expert cooks with an ambition?</h1>
-      <h1 class="small medium-next">Let the world taste your creations</h1>
-	  <h1 class="small medium-next">Sign Up Now!</h1>
+      <h1 class="small medium-next">Let the world taste your creations!</h1>
+      <h1 class="small medium-next">Only when you want to</h1>
+	  <h1 class="small medium-next">We put you on the map and much more!</h1>
     <!--  <span class="info" >Lorem Ipsum is simply dummy text of the printing and typesetting industry.vLorem Ipsum is simply dummy text of the printing and typesetting industry. </span> <span class="btn">More Info</span> </a>  --> </div>
   </div>
    
