--- a/aboutus.html
+++ b/aboutus.html
@@ -76,8 +76,9 @@
    <div id="aboutus_main">
   <div id="about_contant">
   <h2>About Us</h2>
- <p>Our company was founded with a definitive mission to provide a growth platform to empower and enable the hard-working and motivated individuals (and companies). They are assured of a greater visibility and expanded reach through us and we help them become part of the larger economy. Our first product QikGrub was created with an intention to help both customers and vendors to have access to speciality foods with minimal infrastructure for the vendors so they can focus on their skills of making great food and leaving the rest to us. </p>
- <p>Download and experience our app to get a glimpse of well thought out and designed product that showcases our world-class User Experience and Development teams. We engage in detailed analysis and studies for creating everything from icons, colors, and logos to the execution of the application flows.</p>
+ <p>Our company was founded with a definitive mission to provide a growth platform to empower and enable the hard-working and motivated individuals (and companies). They are assured of greater visibility and expanded reach through us and we help them become part of the larger economy. Our first product QikGrub was created with an intention to help both customers and vendors to have access to speciality foods with minimal infrastructure for the vendors so they can focus on their skills of making great food and leaving the rest to us. </p>
+ <p>Wait no more! - Download our app and see a variety of food vendors around you on a map. No more worrying about using a Credit Card, carrying Cash OR exact change even at small vendors.</p>
+ <p>Get a glimpse of our simple app that streamlines the entire Order taking and Transaction processes. Our app drastically reduces face-to-face time between the customers and the vendors which is mostly waiting in line followed by ordering and then waiting again for food to be prepared and packed</p>
 <!-- <p>We have also been teaching STEM concepts to school and college students to prepare them for a better future by providing them deep knowledge via activity based learning. For us, it has always been about Engagement, Empowerment, Outreach and Impact to the people who are hungry and motivated to carve out a great future for themselves. Your success will be our success. </p> -->
  
  </div>
