--- a/slider/index.html
+++ b/slider/index.html
@@ -34,7 +34,7 @@
   <div class="slide slide-0">
     <div class="foreground">&nbsp;</div>
     <div class="overlay"> <a href="#" title="quit the line">
-      <h1 class="small small-next">Hungry? Do you really want to stand in line?</h1>
+      <h1 class="small medium-next">Hungry? Do you really want to stand there?</h1>
 	  <h1 class="small medium-next">Just QikGrub and go!</h1>
     <!--  <span class="info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.vLorem Ipsum is simply dummy text of the printing and typesetting industry. </span> <span class="btn">View Details</span> </a> --> </div>
   </div>
