--- a/Howitworks.html
+++ b/Howitworks.html
@@ -72,7 +72,18 @@
   </div>
   
 <!--<embed width="420" height="315" src="http://www.youtube.com/embed/pj0848pBLCM">
--->	
+-->
+ <div id="Benefits">
+  <h2>Benefits from using QikGrub</h2>
+ <!-- <img src="images/corporate_img.jpg" alt="" id="crp-img"/> -->
+      <p> <strong>How consumers benefit</strong></p>
+      <br>
+      <b>Don't need to spend time at the vendor location except pickup</b>
+      <br>
+      <p> <strong>How vendors benefit</strong></p>
+      <br>
+      <b>No additional infrastructure needed for selling - your smart device is all you need</b>  
+ </div>
 <p>
 
  <a href="https://www.youtube.com/embed/pj0848pBLCM" frameborder="0" allowfullscreen> Click here to check our video </a></p>
