--- a/Howitworks.html
+++ b/Howitworks.html
@@ -96,7 +96,7 @@
 
 <p>
 
- <a href="https://www.youtube.com/embed/pj0848pBLCM" frameborder="0" allowfullscreen> Click here to check our video </a></p>
+ <a href="https://www.youtube.com/embed/pj0848pBLCM" frameborder="0" allowfullscreen> Click here now to check our video </a></p>
 
 
 	
