--- a/slider/index.html
+++ b/slider/index.html
@@ -29,8 +29,8 @@
   </div>
   <div id="slide-bgs"> 
   <img src="images/line.jpg"  alt="" title="" border="0" />
-   <img src="images/0011.PNG"  alt="" title="" border="0" />
-    <img src="images/googlemap.png"  alt="" title="" border="0" /></div>
+   <img src="images/foodtruck.jpg"  alt="" title="" border="0" />
+    <img src="images/qgmap.png"  alt="" title="" border="0" /></div>
   <div class="slide slide-0">
     <div class="foreground">&nbsp;</div>
     <div class="overlay"> <a href="#" title="quit the line">
