--- a/slider/index.html
+++ b/slider/index.html
@@ -28,7 +28,7 @@
     </div>
   </div>
   <div id="slide-bgs"> 
-  <img src="images/qgmap.jpg"  alt="" title="" border="0" />
+  <img src="images/map.jpg"  alt="" title="" border="0" />
    <img src="images/foodtruck.jpg"  alt="" title="" border="0" />
     <img src="images/line.jpg"  alt="" title="" border="0" /></div>
   <div class="slide slide-0">
